--- a/Projects/AVRISP-MKII/makefile
+++ b/Projects/AVRISP-MKII/makefile
@@ -13,7 +13,7 @@
 
 MCU          = atmega32u4
 ARCH         = AVR8
-BOARD        = USBKEY
+BOARD        = POS_SENSOR
 F_CPU        = 16000000
 F_USB        = $(F_CPU)
 OPTIMIZATION = s
